--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     text-align: left;
     font-size: 1em; /* используем безопасные шрифтовые CSS стеки */
     min-height:100%;
+    font-family: 'Roboto', sans-serif;  /*font-family: 'Roboto-Condensed', sans-serif*/;
 }
 a, a:visited { /* порядок правил для ссылок имеет значение */
     color: #f45a40;
