--- a/style.css
+++ b/style.css
@@ -92,3 +92,54 @@ img{
     display: table;
 }
 /* --------------- /базовые настройки ---------*/
+
+.center-block-main{
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+    .logo{
+        float: left;
+        font-size: 1.375em;
+        font-family: 'Roboto-Condensed', sans-serif;
+    }
+    .contact-basket{
+        float: right;
+
+    }
+        .contact-basket p{
+            float: left;
+            font-size: 0.75em;
+            font-weight: 600;
+
+        }
+        .contact-basket p img{
+            vertical-align: middle;
+            margin-right: 3px ;
+
+        }
+
+    .header-top{
+        padding: 30px 0;
+        border-bottom: 1px solid #eee;
+    }
+
+    .header-basket{
+        border: 1px solid  #eee;
+        padding: 7px 25px;
+        margin-left: 20px;
+    }
+        .header-basket a{
+            text-transform: uppercase;
+            color: #7e7f84;
+            text-decoration: none;
+            margin-left: 20px;
+        }
+
+        .header-basket a:hover{
+            color: #f45a40;
+        }
+
+    .header-phone{
+        padding-top: 8px;
+    }
