--- a/style.css
+++ b/style.css
@@ -218,3 +218,31 @@ img{
     position: relative;
     top: -50px;
 }
+
+.block3main{
+
+}
+
+.block3main article{
+    width: 31.6%;
+    float: left;
+    margin-left: 2.6%;
+}
+
+.block3main article:first-child{
+    margin-left: 0;
+}
+
+.block3main article img{
+    display: block;
+    margin: 0 auto 20px auto;
+}
+
+.block3main article h2{
+    font-family: 'Roboto-Condensed', sans-serif;
+    font-size: 1.375em;
+    margin-bottom: 20px;
+}
+.block3main article p{
+    font-size: 0.875em;
+}
