--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ img{
     font-size: 1.125em;
     text-transform: uppercase;
     margin-bottom: 5px;
- 
+
 }
 
 .block4-main-content h3{
@@ -320,4 +320,46 @@ p.price-basket{
     color: #f45a40;
     padding: 15px 0;
     margin-bottom: 0;
+}
+
+.about{
+    margin-bottom: 60px;
+}
+
+.about article{
+    float: left;
+    width: 60%;
+}
+
+.about .map{
+    float: right;
+    width: 35%;
+}
+
+.about article h2{
+    font-size: 1.325em;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: #67686d;
+}
+
+.about article p{
+    font-size: 0.875em;
+    margin-bottom: 25px;
+    font-style: italic;
+}
+
+.map-in{
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+
+.map-in iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
 }
