--- a/style.css
+++ b/style.css
@@ -361,5 +361,41 @@ p.price-basket{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 100%;
 }
+
+.subscribe{
+    background: #f45a40;
+    color: #fff;
+    padding: 30px 0;
+}
+
+.subscribe h2{
+    float: left;
+    font-size: 1.325em;
+    text-transform: uppercase;
+    margin-top: 5px;
+}
+.subscribe-form{
+    float: right;
+}
+    .email-inpt{
+        text-transform: uppercase;
+        font-size: 0.875em;
+        float: left;
+        width: 200px;
+        padding: 7px 20px;
+        border: none;
+    }
+
+    .submit-inpt{
+        background: #ff674f;
+        float: left;
+        margin-left: 20px;
+        border:none;
+        color: #fff;
+        text-transform: uppercase;
+        padding: 7px 20px;
+        cursor: pointer;
+        font-size: 0.875em;
+    }
