--- a/style.css
+++ b/style.css
@@ -399,3 +399,80 @@ p.price-basket{
         cursor: pointer;
         font-size: 0.875em;
     }
+
+    .ftr{
+        background: #2a2d34;
+        padding: 40px 0;
+    }
+
+        .ftr h2{
+            color: #fff;
+            font-size: 1.325em;
+            font-family: 'Roboto-Condensed', sans-serif;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+        }
+
+
+        .ftr p{
+            font-size: 0.875em;
+            margin-bottom: 20px;
+
+        }
+
+        .ftr h3{
+            font-size: 0.875em;
+            margin-bottom: 5px;
+        }
+
+        .ftr h3 a{
+            color: #fff;
+            text-decoration: none;
+            
+        }
+
+        .ftr h3 a:hover{
+        text-decoration: underline;
+
+        }
+
+        .support{
+            float: left;
+            width: 47%;
+            margin-right: 3%;
+        }
+
+            .support a{
+                display: block;
+                margin-bottom: 5px;
+                text-decoration: none;
+                color: #7e7f84;
+            }
+
+            .support a:hover{
+                text-decoration: underline;
+            }
+
+            .ftrmail{
+                width: 100%;
+                text-transform: uppercase;
+                font-size: 0.75em;
+                margin-bottom: 15px;
+                padding: 7px 20px;
+                box-sizing: border-box;
+            }
+
+            .ftrsubmit{
+                text-transform: uppercase;
+                font-size: 0.875em;
+                border: none;
+                background: #f45a40;
+                padding: 7px 20px;
+                color: #fff;
+                cursor: pointer;
+                margin-top: 15px;
+            }
+
+            .ftrtext{
+                width: 100%;
+            }
